--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,9 @@ body {
 }
 
 .intro-section img {
-  width: 200px;
+  width: 300px;
   height: auto;
+  margin-right: 50px;
 }
 
 .info img {
@@ -60,7 +61,32 @@ ul {
 }
 
 .intro-section {
+  padding: 50px 0px 100px 0px;
   background-color: #1f2937;
   display: flex;
   justify-content: center;
+}
+
+.intro-section-title {
+  font-size: 44px;
+  font-weight: bold;
+  max-width: 450px;
+  margin-right: 300px;
+  color: white;
+}
+
+.left-content-wrapper p {
+  color: #e5e7eb;
+  max-width: 400px;
+}
+
+.left-content-wrapper button {
+  cursor: pointer;
+  background: #3882f6;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  font-size: 17px;
+  padding: 8px 30px 8px 30px;
+  font-weight: bold;
 }
