--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ body {
   font-family: Roboto;
 }
 
+::selection {
+  background: #e00814;
+}
+
 .intro-section img {
   width: 300px;
   height: auto;
@@ -16,9 +20,11 @@ body {
 
 .info img {
   width: 200px;
-  height: auto;
-  border: 3px solid #3882f6;
-  border-radius: 5px;
+  height: 320px;
+  border: 3.5px solid #3882f6;
+  border-radius: 8px;
+  padding: 5px;
+  margin: 0px;
 }
 
 .header {
@@ -65,6 +71,7 @@ ul {
   background-color: #1f2937;
   display: flex;
   justify-content: center;
+  margin-bottom: 30px;
 }
 
 .intro-section-title {
@@ -89,4 +96,32 @@ ul {
   font-size: 17px;
   padding: 8px 30px 8px 30px;
   font-weight: bold;
+}
+.left-content-wrapper button:hover {
+  background: #2b61b5;
+}
+
+.middle-section {
+  text-align: center;
+}
+
+.middle-section-title {
+  font-size: 38px;
+  color: #1f2937;
+  font-weight: 900;
+  margin-bottom: 40px;
+}
+
+.middle-section-image-container {
+  display: flex;
+  justify-content: center;
+}
+
+.info {
+  width: 300px;
+}
+
+.info .text {
+  max-width: 200px;
+  margin-left: 50px;
 }
